@@ -10,6 +10,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2017-10-30 DariusIII
+	Fix: Update categorization to properly categorize sports related releases (fixes issue #2527)
 2017-10-22 niel
 	Chg: Defaults in settings.example.php for logging, are now enabled.
 	Chg: Composer post install script now copies settings.example.php to settings.php automatically.
